# predictor

./: CMakeLists.txt  Doxyfile.config  README.md  in.vim
data/: dataset3.csv  dataset3.original.csv  irisdb.csv
doc/: goals.txt
run/: analyser.r  run.sh  visualize.sh  visualize_batch.sh
src/: main.cpp
src/analysis/: ANNPredictor.cpp  ANNPredictor.hpp  Analyser.cpp  Analyser.hpp  ClassMap.cpp  ClassMap.hpp  CondFolds.cpp  CondFolds.hpp  DTreePredictor.cpp  DTreePredictor.hpp  Functions.cpp  Functions.hpp  Helpers.cpp  Helpers.hpp  LSVMPredictor.cpp  LSVMPredictor.hpp  ModelInterpreter.cpp  ModelInterpreter.hpp  Predictor.cpp  Predictor.hpp  RFPredictor.cpp  RFPredictor.hpp  SVMPredictor.cpp  SVMPredictor.hpp  SameSizeFolds.cpp  SameSizeFolds.hpp  Types.cpp  Types.hpp
